--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,6 +1,6 @@
 .modal_wrap {
   background-color: #fff7ed;
-  height: 200px;
+  height: 238px;
   width: 400px;
   box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -27,12 +27,51 @@
   background-color: #ffcfd7;
   width: 50%;
   height: 40px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 .tag {
   background-color: #ffcfd7;
   border: none;
   outline: none;
+  text-align: center;
 }
 .memo_area {
   margin: auto;
+  width: 50%;
+  height: 40px;
+  position:relative;
+  top: 6px;
+}
+.memo {
+ background-color: #FFF7ED;
+ border: none;
+ outline: none;
+ text-align: left;
+ border-radius: 10px;
+ position: relative;
+ right: 50px;
+ top: 6px;
+}
+.memo_text {
+ background-color: #FFFFFF;
+ width: 140%;
+ height: 120px;
+ border-radius: 10px;
+ border: solid 2px;
+ position: relative;
+ right: 50px;
+ top: 6px;
+}
+.register_btn {
+  width: 17%;
+  height: 30px;
+  background-color: #FFFFFF;
+  border-radius: 30px;
+  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.25);
+  position: relative;
+  top: 124px;
+  left: 300px;
+  font-size: 16px;
 }
