--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap");
 .header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.logo{
+.logo {
   height: 90px;
-
 }
-.title{font-family: jura,sans-serif;}
+.title {
+  font-family: jura, sans-serif;
+}
