--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,3 +9,21 @@
 
 }
 .title{font-family: jura,sans-serif;}
+@media screen and (max-width: 400px) {
+  .header-content {
+    width: 100%;
+    height: auto;
+    justify-content: space-between;
+    align-items: center; 
+    display: flex;
+  }
+  .logo {
+    width: 90px;
+    height: auto;
+    position: relative;
+    top: 17px;
+  }
+  .title {
+    display: none;
+  }
+}
