--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,6 +1,6 @@
 .modal_wrap {
   background-color: #fff7ed;
-  height: 238px;
+  height: 300px;
   width: 400px;
   box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -12,7 +12,7 @@
 .date_area {
   background-color: #bce8d9;
   width: 50%;
-  height: 40px;
+  height: 50px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -26,7 +26,7 @@
 .tag_area {
   background-color: #ffcfd7;
   width: 50%;
-  height: 40px;
+  height: 50px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -41,37 +41,82 @@
   margin: auto;
   width: 50%;
   height: 40px;
-  position:relative;
+  position: relative;
   top: 6px;
 }
 .memo {
- background-color: #FFF7ED;
- border: none;
- outline: none;
- text-align: left;
- border-radius: 10px;
- position: relative;
- right: 50px;
- top: 6px;
+  background-color: #fff7ed;
+  border: none;
+  outline: none;
+  text-align: left;
+  border-radius: 10px;
+  position: relative;
+  right: 50px;
+  top: 6px;
 }
 .memo_text {
- background-color: #FFFFFF;
- width: 140%;
- height: 120px;
- border-radius: 10px;
- border: solid 2px;
- position: relative;
- right: 50px;
- top: 6px;
+  background-color: #ffffff;
+  width: 140%;
+  height: 120px;
+  border-radius: 10px;
+  border: solid 2px;
+  position: relative;
+  right: 50px;
+  top: 6px;
 }
 .register_btn {
   width: 17%;
   height: 30px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 30px;
   box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.25);
   position: relative;
   top: 124px;
   left: 300px;
   font-size: 16px;
+}
+
+.date_btn {
+  width: 150px;
+  height: 30px;
+  position: relative;
+  /* 日付表示部分を非表示にする場合 */
+  color: transparent;
+}
+
+/* カレンダーアイコンを透明化しつつ機能は保持 */
+.date_btn::-webkit-calendar-picker-indicator {
+  background: transparent;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 1;
+}
+
+/* 不要なボタンを非表示 */
+.date_btn::-webkit-inner-spin-button,
+.date_btn::-webkit-clear-button {
+  -webkit-appearance: none;
+  display: none;
+}
+
+/* カスタムボタンのデザイン追加 */
+.date_btn::after {
+  content: "+"; /* ボタンのテキスト */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white; /* ボタンの背景色 */
+  color: black; /* ボタンのテキスト色 */
+  border-radius: 4px;
+  pointer-events: none; /* クリックイベントが下層に伝わるようにする */
 }
