--- a/src/pages/CancelList.module.css
+++ b/src/pages/CancelList.module.css
@@ -1,69 +1,72 @@
-.tableOutline{
-  padding: 10% 10%;
+
+/* 以下flexbox版*/
+
+.cell{
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr; 
+  grid-template-rows: 1fr 2fr; 
+  width: 400px;
+  height: 100%;
   position: relative;
-  width: 300px;
-  height: 50px;
+  width: 500px;
+  height: 100px; 
   z-index: 1;
 }
 
-.cancelTable{
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
+.cellDate{
+  overflow-wrap: break-word;
+  z-index: 1;
+  margin: 0;
+  grid-column: 1 / 2; 
+  grid-row: 1 / 3;
+  background-color:#BFF0C3;
+  width: 100px;
   height: 100%;
+} 
+
+.cellTitle {
+  overflow-wrap: break-word;
+  z-index: 1;
+  margin: 0;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  background-color: #D9D9D9;
 }
 
-.date{
-  position: absolute;
-  width: 20%;
-  height: 100%;
-  top: 0%;
-  left: 0%;
-  background-color:#BFF0C3;
-}
-.title{
-  position: absolute;
-  width: 60%;
-  height: 20%;
-  top: 0%;
-  left: 20%;
-  background-color:#D9D9D9;
-}
-.tag{
-  position: absolute;
-  width: 20%;
-  height: 20%;
-  top: 0%;
-  left: 80%;
+.cellTag {
+  overflow-wrap: break-word;
+  z-index: 1;
+  margin: 0;
+  grid-column: 3 / 4; 
+  grid-row: 1 / 2;
   background-color: #FFCFD7;
 }
-.memo{
-  position: absolute;
-  width: 20%;
-  height: 20%;
-  top: 20%;
-  left: 20%;
-  background-color: #FFFFFF;
+
+.cellMemo {
+  overflow-wrap: break-word;
+  padding-right: 15%;
+  z-index: 1;
+  margin: 0;
+  grid-column: 2 / 4;
+  grid-row: 2 / 3; 
+  background-color: #f9e9ed;
 }
 
 /* 理由生成ボタン */
 .plus-button {
-    position: absolute;
-    z-index: 1;
-    top: 90%;
-    left: 90%;
-    width: 50px;
-    height: 50px;
-    background-color: #D9D9D9;
-    border: bold;
-    border-radius: 100%;
-    cursor: pointer;
-    font-size: 30px;
-  }
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 90%;
+  width: 50px;
+  height: 50px;
+  background-color: #D9D9D9;
+  border: bold;
+  border-radius: 100%;
+  cursor: pointer;
+  font-size: 30px;
+}
 
 .plus-button:hover {
-    background-color: #9A9A9A;
-  }
-
-
+  background-color: #9A9A9A;
+}
