--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,3 +1,16 @@
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
 .modal_wrap {
   background-color: #fff7ed;
   height: 300px;
