--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -72,6 +72,7 @@
   border: none;
   border-radius: 30px;
   font-size: 20px;
+  cursor: pointer;
 }
 .tag_btn:hover {
   background-color: #f5f5f5;
@@ -101,7 +102,7 @@
   height: 30px;
   background-color: #ffffff;
   border-radius: 30px;
-
+  cursor: pointer;
   font-size: 16px;
   border: 1px solid;
 }
