--- a/src/components/CancelCard.module.css
+++ b/src/components/CancelCard.module.css
@@ -8,6 +8,8 @@
   height: auto;
   position: relative;
   z-index: 1;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .cellDate {
@@ -17,7 +19,8 @@
   margin: 0;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  background-color: #bff0c3;
+  background-color: #bce8d9;
+  border-right: 1px solid #fff7ed;
 }
 
 .cellTitle {
@@ -28,6 +31,7 @@
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   background-color: #d9d9d9;
+  border-right: 1px solid #fff7ed;
 }
 
 .cellTag {
@@ -44,12 +48,13 @@
 .cellMemo {
   padding-left: 5px;
   overflow-wrap: break-word;
-  padding-right: 12%;
+  padding-right: 15%;
   z-index: 1;
   margin: 0;
   grid-column: 2 / 4;
   grid-row: 2 / 3;
   background-color: #f9e9ed;
+  border-top: 1px solid #fff7ed;
 }
 
 .plus-button {
@@ -57,23 +62,27 @@
   z-index: 2;
   bottom: 3px;
   right: 3px;
-  width: 30px;
-  height: 30px;
   background-color: #d9d9d9;
-  border: bold;
-  border-radius: 100%;
+  border: 1px solid;
+  border-radius: 20px;
   cursor: pointer;
-  font-size: 20px;
 }
 
 .plus-button:hover {
   background-color: #9a9a9a;
 }
-
+@media screen and(max-width:820px) {
+  .cell {
+    width: 100%;
+  }
+}
 @media screen and (max-width: 480px) {
   .cell {
     width: 100%;
     height: auto;
     font-size: 12px;
+  }
+  .plus-button {
+    font-size: 10px;
   }
 }
