--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -73,6 +73,7 @@
   border-radius: 30px;
   font-size: 20px;
   cursor: pointer;
+  color: black;
 }
 .tag_btn:hover {
   background-color: #f5f5f5;
@@ -104,7 +105,8 @@
   border-radius: 30px;
   cursor: pointer;
   font-size: 16px;
-  border: 1px solid;
+  border: 1px solid black;
+  color: black;
 }
 .register_btn:hover {
   background-color: #f5f5f5;
