--- a/src/components/CancelCard.module.css
+++ b/src/components/CancelCard.module.css
@@ -63,9 +63,10 @@
   bottom: 3px;
   right: 3px;
   background-color: #d9d9d9;
-  border: 1px solid;
+  border: 1px solid black;
   border-radius: 20px;
   cursor: pointer;
+  color: black;
 }
 
 .plus-button:hover {
